fixing footer margin issue on small heights

--- a/congrats/django/styles.css
+++ b/congrats/django/styles.css
@@ -439,7 +439,7 @@ footer a {
       max-width: 920px;
       width: 100%;
       margin: 0 auto;
-      margin-top: 10px;
+      margin-top: 90px;
       border-top: 2px solid #efefef;
   }
   p {
